--- a/dashboard.html
+++ b/dashboard.html
@@ -95,7 +95,7 @@
 
             if (playerGender === "Female" && spouseGender === "Male") {
                 // Play pregnancy sound
-                const audio = new Audio("baby.ogg");
+                const audio = new Audio("baby.mp3");
                 audio.play();
 
                 alert("You are now pregnant!");
